fix: centralize toolbar button rendering and fix visibility on resize

--- a/src/styles/overrides/_excalidraw.scss
+++ b/src/styles/overrides/_excalidraw.scss
@@ -174,3 +174,8 @@
 .HelpDialog__header {
 	display: none !important;
 }
+
+.excalidraw--mobile .App-toolbar--mobile .Stack_horizontal {
+  grid-template-columns: repeat(11, 1fr);
+  grid-auto-flow: unset;
+}
